# Ditto

./: CMakeLists.txt  Ditto.kdev4  README.md
.kdev4/: Ditto.kdev4
DittoWin/: DittoWin.cbp  DittoWin.depend  DittoWin.layout
MewWin/: MewWin.cbp  MewWin.depend  MewWin.layout
lib/Ditto/: CMakeLists.txt  ditto.c  ditto.h  textureLoader.c  textureLoader.h
src/Mew/: CMakeLists.txt  main.c
