CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Ditto C)

FIND_PACKAGE(SDL REQUIRED)
IF (${SDL_FOUND} EQUAL "NO")
   MESSAGE(FATAL_ERROR "'SDL' not found")
ENDIF()
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})

INCLUDE_DIRECTORIES(include lib)
ADD_DEFINITIONS(-g)

ADD_SUBDIRECTORY(lib/Ditto lib)
ADD_SUBDIRECTORY(src/Mew bin)